fixing img size and alignment

--- a/static/style.css
+++ b/static/style.css
@@ -18,7 +18,7 @@ pre {
 }
 
 #regina {
-  width: 600px;
+  width: 100%;
 }
 
 #title {
